--- a/readme
+++ b/readme
@@ -1,15 +1,14 @@
 certFHE library in C++ 
 
-To build on linux:
-1. cd certfhe-library/
-2. mkdir build
+To build on linux using cmake & terminal:
+1. mkdir build
+2. cd build
 3. cmake ../ 
 4. make
 
-To build on Windows:
-1. go to certfhe-library/
-2. make a folder build
-3. open a command prompt and make sure you have cmake 
-4. type cmake ../ from build folder
-5. open VS solution from build folder
-6. build all from VS
+To build on Windows using cmake & VS:
+1. make a folder build
+2. open a command prompt and make sure you have cmake installed
+3. type cmake ../ from build folder
+4. open VS solution from build folder
+5. build all from VS
